--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "qs": "^6.11.0",
+    "swagger-ui-express": "^5.0.1",
     "truffle": "^5.5.21",
     "ts-results": "^3.3.0",
     "typescript": "^4.6.3",
