--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "node-typescript-boilerplate",
+  "name": "metadexa-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "types": "./types/global.d.ts",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "npm run lint && tsc -p .",
+    "build": "npm run lint-fix && tsc -p .",
     "debug": "DEBUG=axios nodemon index.js",
     "start:local": "npm run lint && NODE_ENV=local nodemon index.js",
     "start:test": "npm run lint && NODE_ENV=test node build/src/server.js",
@@ -45,7 +45,7 @@
     "ts-results": "^3.3.0",
     "typescript": "^4.6.3",
     "web3": "^1.7.4",
-    "winston": "^3.7.2"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
