--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,13 @@
     },
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": ["error"],
+        "prettier/prettier": ["off"],
+		"max-classes-per-file": 1,
+		"no-return-assign":"warn",
         "semi": ["error", "always"],
         "object-curly-spacing": ["error", "always"],
         "camelcase": "off",
+		"prefer-destructuring" : "warn",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": 1,
         "@typescript-eslint/no-inferrable-types": [
@@ -29,7 +32,7 @@
         "no-underscore-dangle": "off",
         "no-shadow": "off",
         "no-new": 0,
-        "@typescript-eslint/no-shadow": ["error"],
+        "@typescript-eslint/no-shadow": "error",
         "@typescript-eslint/no-unused-vars": "warn",
         "quotes": [2, "single", { "avoidEscape": true }],
         "class-methods-use-this": "off",
