--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "swagger-ui-express": "^5.0.1",
     "truffle": "^5.5.21",
     "ts-results": "^3.3.0",
-    "typescript": "^4.6.3",
+    "typescript": "^5.7.3",
+    "viem": "^2.22.23",
     "web3": "^1.7.4",
     "winston": "^3.15.0"
   },
