--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bignumber.js": "^9.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ethers": "5.7.2",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
